option java_package = "com.gp.game.message";

// 进入捕鱼房间
message OpFishesEnterRoom {
	// 当前服务器时间
	required int64 serverTimestamp = 1;
	//当前房间鱼
	repeated OpFishesInfo fishesInfos = 2;
	// 当前玩家数据
	repeated OpFishesPlayerInfo playerInfos = 3;
	optional int32 status = 4;//房间状态 1.正常 2.鱼群
	optional int64  startTime = 5;//鱼群开始时间
}

//鱼信息
message OpFishesInfo {
	required string id = 1;//鱼唯一id
	required string fishesId = 2;//鱼id
	required string fishesPath = 3;//路径编码
	required int32 deviation = 4;//偏移量
	required int32 deviation1 = 5;//偏移量
	required int64 createTime = 6;//创建时间
	required int32 type = 7;//1.小鱼  2. 中鱼 3. 大鱼 4.boss 5.组合鱼 
}

// 捕鱼玩家信息
message OpFishesPlayerInfo {
	required int64 playerId = 1;
	// 当前子弹金钱
	required int64 curBulletMoney = 2;
	// 当前使用炮
	required int32 curCannonId = 3;
	// 身上有多少钱
	required int64 money = 4;
	// 射击信息
	optional OpFishesShootInfo shootIno = 5; 
}

//锁定目标
message OpFishesShootInfo {
	required int32 curShootType = 1;//1 正常 2 自动 3锁定
	optional string curLockTargetFishId = 2;//如果是锁定的话 锁定的鱼的Id
	// 当时自动射击的时候  我会传这个x,y 同步转发给其他人就好
	optional float curShootTargetX = 3;
	optional float curShootTargetY = 4;
}
//锁定目标 - 所有人
message OpFishesShootInfoRet {
	required int64 playerId = 1;
	required int32 curShootType = 2;//1 正常 2 自动 3锁定
	optional string curLockTargetFishId = 3;//如果是锁定的话 锁定的鱼的Id
	// 当时自动射击的时候  我会传这个x,y 同步转发给其他人就好
	optional float curShootTargetX = 4;
	optional float curShootTargetY = 5;
	
}

//射击
message OpFishesBattleStep {
	optional float targetX = 1;
	optional float targetY = 2;
}

//射击回复 --所有人
message OpFishesBattleStepRet {
	required int64 playerId = 1;//玩家id
	required int64 money = 2; //余额
	optional float targetX = 3;
	optional float targetY = 4;
	optional string code = 5;//射击编号
}

//击中
message OpFishesBattleHit {
	required string fishId = 1;
	required string uuid = 2;//唯一id
	required string code = 3;//射击编号
}

//击中回复 --所有人
message OpFishesBattleHitRet {
	required int64 playerId = 1;//玩家id
	required string fishId = 2;
	required string uuid = 3;//唯一id
}


//死亡推送--所有人
message OpFishesDeadPush {
	required string fishId = 1;
	required string uuid = 2;
	// 暂时还不清楚机制 但是应该有那种 多人击杀 获得金币的情况
	required int64 playerId = 3;//击杀鱼的人
	required int64 moneyChange = 4; //击杀获取的金币
}

//设置炮类型
message OpFishesSetBulletMoney {
	required int64 bulletMoney = 1;
}

//设置炮类型 回复 --所有人
message OpFishesSetBulletMoneyRet {
	required int64 playerId = 1;
	required int64 bulletMoney = 2;
}

//鱼游出
message OpFishesOut {
	repeated string id = 1;
}
//鱼游出
message OpFishesOutRet {
	required string version = 1;
}

//创建鱼
message OpFishesCreatePush {
	repeated OpFishesInfo fishesInfo = 1;
}

//房间状态推送
message OpFishesStatusPush {
	required int32 status = 1;//房间状态 1.正常 2.鱼群
	optional int64 startTime = 2;//鱼群开始时间
}

//更换炮
message OpChangeCannon {
	required string cannonId = 1;//炮的id
}
//更换炮--all
message OpChangeCannonRet {
	required int64 playerId = 1;//id
	required string cannonId = 2;//炮的id
}






